--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <h1>Deployed automatically using GitHub Actions 🚀</h1>
+<br>
+<h2>Deploy to aws S3.</h2>
+<h3>Complete CI/CD pipeline. Build + Test + Deploy</h3>
